79d4739ec93be9039b9aef3d4e47b38ea08d74a0 Fix: Use gap for columns layout which is far more consistent Fix: Dropdown styling didn't really work for the collection headers with the styling integrations.
Sync to source repo @79d4739ec93be9039b9aef3d4e47b38ea08d74a0

--- a/css/buttons.jqueryui.css
+++ b/css/buttons.jqueryui.css
@@ -172,8 +172,7 @@ div.dt-button-collection.fixed {
   left: 50%;
   margin-left: -75px;
   border-radius: 5px;
-  max-height: 100vh;
-  overflow: auto;
+  background-color: white;
 }
 div.dt-button-collection.fixed.two-column {
   margin-left: -200px;
@@ -185,22 +184,26 @@ div.dt-button-collection.fixed.four-column {
   margin-left: -300px;
 }
 div.dt-button-collection.fixed.columns {
-  margin-left: -412px;
+  margin-left: -409px;
 }
 @media screen and (max-width: 1024px) {
   div.dt-button-collection.fixed.columns {
-    margin-left: -309px;
+    margin-left: -308px;
   }
 }
 @media screen and (max-width: 640px) {
   div.dt-button-collection.fixed.columns {
-    margin-left: -205px;
+    margin-left: -203px;
   }
 }
 @media screen and (max-width: 460px) {
   div.dt-button-collection.fixed.columns {
-    margin-left: -102px;
+    margin-left: -100px;
   }
+}
+div.dt-button-collection.fixed > :last-child {
+  max-height: 100vh;
+  overflow: auto;
 }
 div.dt-button-collection.two-column > :last-child, div.dt-button-collection.three-column > :last-child, div.dt-button-collection.four-column > :last-child {
   display: block !important;
@@ -246,12 +249,14 @@ div.dt-button-collection.columns > :last-child {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  width: 819px;
+  gap: 6px;
+  width: 818px;
   padding-bottom: 1px;
 }
 div.dt-button-collection.columns > :last-child .dt-button {
   min-width: 200px;
   flex: 0 1;
+  margin: 0;
 }
 div.dt-button-collection.columns.dtb-b3 > :last-child, div.dt-button-collection.columns.dtb-b2 > :last-child, div.dt-button-collection.columns.dtb-b1 > :last-child {
   justify-content: space-between;
@@ -267,12 +272,12 @@ div.dt-button-collection.columns.dtb-b1 .dt-button {
 }
 @media screen and (max-width: 1024px) {
   div.dt-button-collection.columns > :last-child {
-    width: 615px;
+    width: 612px;
   }
 }
 @media screen and (max-width: 640px) {
   div.dt-button-collection.columns > :last-child {
-    width: 410px;
+    width: 406px;
   }
   div.dt-button-collection.columns.dtb-b3 .dt-button {
     flex: 0 1 32%;
@@ -280,7 +285,7 @@ div.dt-button-collection.columns.dtb-b1 .dt-button {
 }
 @media screen and (max-width: 460px) {
   div.dt-button-collection.columns > :last-child {
-    width: 205px;
+    width: 200px;
   }
 }
 
